# digital-dashboard-display

./: .gitignore  CMakeLists.txt  README.md
include/: Dashboard.h  Speedometer.h  Tachometer.h
src/: Dashboard.cpp  Dashboard.h  Speedometer.cpp  Tachometer.cpp  main.cpp
